--- a/Components/assignments.html
+++ b/Components/assignments.html
@@ -17,17 +17,17 @@
       <div id="logo"><h1>Ryan<a href="#">Hwang</a></h1></div>
       <nav>
         <ul class="lavaLampWithImage" id="lava_menu">
-          <li><a href="index.html">about me</a></li>
-          <li class="current"><a href="work.html">work experiences</a></li>
+          <li><a href="../index.html">about me</a></li>
+          <li><a href="work.html">work experiences</a></li>
           <li><a href="portfolio.html">my projects</a></li>
-          <li><a href="assignments.html">assignments</a></li>
+          <li class="current"><a href="assignments.html">assignments</a></li>
           <li><a href="contact.html">contact</a></li>
         </ul>
       </nav>
     </header>
     <div id="site_content">
       <div id="sidebar_container">
-        <div class="gallery">
+        <div id="gallery">
           <ul class="images">
             <li class="show"><img width="450" height="450" src="images/1.jpg" alt="photo_one" /></li>
             <li><img width="450" height="450" src="images/2.jpg" alt="photo_two" /></li>
@@ -38,9 +38,14 @@
         </div>
       </div>
       <div id="content">
-        <h1>About Me</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui.</p>
+        <h1>Assignments</h1>
+        <div id="assign_container">
+          <h4 class="select"><a href="https://einsophxi.github.io/">Assignment 0</a></h4>
+          <p>hi</p>
+          <h4><a href="#">Assignment 1</a></h4>
+          <p>hi</p>
+        </div>
+        <p></p>
       </div>
     </div>
 
