--- a/Components/work.html
+++ b/Components/work.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>my portfolio two</title>
+  <title>website</title>
   <meta name="description" content="website description" />
   <meta name="keywords" content="website keywords, website keywords" />
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
@@ -17,9 +17,9 @@
       <div id="logo"><h1>Ryan<a href="#">Hwang</a></h1></div>
       <nav>
         <ul class="lavaLampWithImage" id="lava_menu">
-          <li><a href="index.html">about me</a></li>
-          <li><a href="work.html">work experiences</a></li>
-          <li class="current"><a href="portfolio.html">my projects</a></li>
+          <li><a href="../index.html">about me</a></li>
+          <li class="current"><a href="work.html">work experiences</a></li>
+          <li><a href="portfolio.html">my projects</a></li>
           <li><a href="assignments.html">assignments</a></li>
           <li><a href="contact.html">contact</a></li>
         </ul>
@@ -27,7 +27,7 @@
     </header>
     <div id="site_content">
       <div id="sidebar_container">
-        <div id="gallery">
+        <div class="gallery">
           <ul class="images">
             <li class="show"><img width="450" height="450" src="images/1.jpg" alt="photo_one" /></li>
             <li><img width="450" height="450" src="images/2.jpg" alt="photo_two" /></li>
@@ -38,10 +38,9 @@
         </div>
       </div>
       <div id="content">
-        <h1>My Portfolio</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui.</p>
-        <p></p>
+        <h1>Work Experience</h1>
+        <p>Fill in with work experiences</p>
+        <p>more</p>
       </div>
     </div>
   </div>
